# aoc2023

./: .ghci  .gitignore  CHANGELOG.md  LICENSE  README.md  aoc2023.cabal  cabal.project.freeze  download_input.py  keybindings.json  repl  settings.json
app/: GHCI.hs  Main.hs
inputs/: README.md
src/: MyPrelude.hs
src/Solutions/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs
