cabal-version:      3.0
name:               aoc2023
version:            0.1.0.0
synopsis:           Advent of Code 2023 solutions
homepage:           https://github.com/typesafety/aoc2023
license:            MIT
license-file:       LICENSE
author:             Thomas Li
maintainer:         ailoodee@gmail.com

common warnings
    ghc-options:
        -Wall

library
    import:
        warnings,
    exposed-modules:
        MyPrelude
        Solutions.Day01
        Solutions.Day02
        Solutions.Day03
        Solutions.Day04
        Solutions.Day05
    build-depends:
        base ^>= 4.18.1.0,
        -- Standard data structures.
        containers,
        -- For the Hashable class and instances.
        hashable,
        -- One-dimensional arrays.
        javelin,
        -- Ergonomic records.
        optics,
        -- For parsing puzzle input.
        megaparsec,
        -- For Reader/State.
        mtl,
        -- For easy prettyprinting.
        pretty-simple,
        -- To avoid String.
        text,
        -- Show instances and functions for Text.
        text-show,
        -- Hashmaps are not part of containers.
        unordered-containers,
    hs-source-dirs:
        src
    default-language: GHC2021

executable aoc2023
    import:
        warnings,
    main-is: Main.hs
    build-depends:
        base ^>= 4.18.1.0,
        aoc2023,

        filepath,
        optparse-applicative,
    hs-source-dirs:
        app
    other-modules:
        GHCI
    default-language: GHC2021
